adicionando eslint prettier e sucrase

--- a/package.json
+++ b/package.json
@@ -3,18 +3,25 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
-  "dependencies": {
-    "axios": "^0.21.1",
-    "blaz-steam-api": "^1.0.3",
-    "express": "^4.17.1"
-  },
   "scripts": {
     "dev": "nodemon src/server.js",
     "kill": "npx kill-port 3333",
-    "start": "npm run kill && npm run dev"
+    "build": "sucrase ./src -d ./dist --transforms imports && node dist/server.js"
+  },
+  "dependencies": {
+    "axios": "^0.21.1",
+    "blaz-steam-api": "^1.0.3",
+    "cors": "^2.8.5",
+    "dotenv": "^9.0.2",
+    "express": "^4.17.1",
+    "sucrase": "^3.18.1"
   },
   "devDependencies": {
-    "dotenv": "^9.0.2",
-    "nodemon": "^2.0.7"
+    "eslint": "^7.27.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.23.3",
+    "eslint-plugin-prettier": "^3.4.0",
+    "nodemon": "^2.0.7",
+    "prettier": "^2.3.0"
   }
 }
