--- a/package.json
+++ b/package.json
@@ -1,27 +1,24 @@
 {
-  "name": "api-trade-cards-v2",
+  "name": "api-trade-cards-v3",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "dev": "nodemon src/server.js",
+    "dev": "ts-node-dev --respawn --transpile-only --ignore-watch node_modules server.ts",
     "kill": "npx kill-port 3333",
-    "build": "sucrase ./src -d ./dist --transforms imports && node dist/server.js"
+    "build": ""
   },
   "dependencies": {
     "axios": "^0.21.1",
     "blaz-steam-api": "^1.0.3",
     "cors": "^2.8.5",
     "dotenv": "^9.0.2",
-    "express": "^4.17.1",
-    "sucrase": "^3.18.1"
+    "express": "^4.17.1"
   },
   "devDependencies": {
-    "eslint": "^7.27.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-import": "^2.23.3",
-    "eslint-plugin-prettier": "^3.4.0",
-    "nodemon": "^2.0.7",
-    "prettier": "^2.3.0"
+    "@types/cors": "^2.8.10",
+    "@types/express": "^4.17.11",
+    "ts-node-dev": "^1.1.6",
+    "typescript": "^4.2.4"
   }
 }
