--- a/package.json
+++ b/package.json
@@ -3,10 +3,14 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "engines": {
+    "node": "14.16.1"
+  },
   "scripts": {
-    "build": "tsc && node dist/server.js",
-    "dev": "ts-node-dev --respawn --transpile-only --ignore-watch node_modules server.ts",
+    "postinstall": "tsc",
+    "build": "node dist/server.js",
     "kill": "npx kill-port 3333",
+    "dev": "ts-node-dev --respawn --transpile-only --ignore-watch node_modules server.ts",
     "typeorm": "ts-node-dev node_modules/typeorm/cli.js"
   },
   "dependencies": {
@@ -15,12 +19,14 @@
     "cors": "^2.8.5",
     "dotenv": "^9.0.2",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "pg": "^8.6.0",
     "typeorm": "^0.2.32"
   },
   "devDependencies": {
     "@types/cors": "^2.8.10",
     "@types/express": "^4.17.11",
+    "@types/jsonwebtoken": "^8.5.1",
     "ts-node-dev": "^1.1.6",
     "typescript": "^4.2.4"
   }
