--- a/.env
+++ b/.env
@@ -1,3 +1,7 @@
 API_KEY=F94D88C29B7C04DED7FC1A11CF514BCC
 BASE_URL=http://localhost:3333
-PORT=3333
+
+PG_HOST=localhost
+PG_USER=postgres
+PG_PASSWORD=docker
+PG_DATABASE=trade-cards
