--- a/package.json
+++ b/package.json
@@ -21,12 +21,15 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "pg": "^8.6.0",
-    "typeorm": "^0.2.32"
+    "reflect-metadata": "^0.1.13",
+    "typeorm": "^0.2.32",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/cors": "^2.8.10",
     "@types/express": "^4.17.11",
     "@types/jsonwebtoken": "^8.5.1",
+    "@types/uuid": "^8.3.0",
     "ts-node-dev": "^1.1.6",
     "typescript": "^4.2.4"
   }
