--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "node": "14.16.1"
   },
   "scripts": {
-    "build": "tsc && typeorm migration:run",
+    "build": "tsc",
     "start": "node dist/server.js",
     "kill": "npx kill-port 3333",
     "dev": "ts-node-dev --respawn --transpile-only --ignore-watch node_modules server.ts",
@@ -23,14 +23,14 @@
     "pg": "^8.6.0",
     "reflect-metadata": "^0.1.13",
     "typeorm": "^0.2.32",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "ts-node-dev": "^1.1.6"
   },
   "devDependencies": {
     "@types/cors": "^2.8.10",
     "@types/express": "^4.17.11",
     "@types/jsonwebtoken": "^8.5.1",
     "@types/uuid": "^8.3.0",
-    "ts-node-dev": "^1.1.6",
     "typescript": "^4.2.4"
   }
 }
