--- a/ormconfig.json
+++ b/ormconfig.json
@@ -1,4 +1,6 @@
 {
+  "type": "sqlite",
+  "database": "./src/database/database.sqlite",
   "migrations": ["./src/database/migrations/**.ts"],
   "entities": ["./src/database/models/**.ts"],
   "cli": {
