--- a/package.json
+++ b/package.json
@@ -20,11 +20,11 @@
     "dotenv": "^9.0.2",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
-    "pg": "^8.6.0",
     "reflect-metadata": "^0.1.13",
+    "sqlite3": "^5.0.2",
+    "ts-node-dev": "^1.1.6",
     "typeorm": "^0.2.32",
-    "uuid": "^8.3.2",
-    "ts-node-dev": "^1.1.6"
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/cors": "^2.8.10",
