criando rota de dashboard

--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 API_KEY=B2A0EDCAB853C5D9069B950DB9E8EDBB
 BASE_URL=http://localhost:3333
+APP_SECRET=apitradecards
 
 PG_HOST=localhost
 PG_USER=postgres
