adicionando Banco postgres

--- a/.env
+++ b/.env
@@ -3,6 +3,7 @@ BASE_URL=http://localhost:3333
 APP_SECRET=apitradecards
 
 PG_HOST=localhost
+PG_PORT=5432
 PG_USER=postgres
 PG_PASSWORD=docker
 PG_DATABASE=trade-cards
