--- a/.env
+++ b/.env
@@ -7,3 +7,7 @@ PG_PORT=5432
 PG_USER=postgres
 PG_PASSWORD=docker
 PG_DATABASE=trade-cards
+
+TYPEORM_ENTITIES = ./src/models/*.ts
+TYPEORM_MIGRATIONS = ./src/database/migrations/*.ts
+TYPEORM_MIGRATIONS_DIR = ./src/database/migrations
