removendo postgres e adicionando banco Mongo

--- a/.env
+++ b/.env
@@ -2,13 +2,6 @@ API_KEY=B7691B0FACE2701FD2835FFD16B0DB39
 BASE_URL=http://localhost:3333
 APP_SECRET=apitradecards
 
-PG_HOST=localhost
-PG_PORT=5432
-PG_USER=postgres
-PG_PASSWORD=docker
-PG_DATABASE=trade-cards
+MONGO_URL=mongodb://localhost/api-trade-cards:
 
 
-TYPEORM_ENTITIES = ./src/models/*.ts
-TYPEORM_MIGRATIONS = ./src/database/migrations/*.ts
-TYPEORM_MIGRATIONS_DIR = ./src/database/migrations
