--- a/.env.example
+++ b/.env.example
@@ -2,12 +2,4 @@ API_KEY=
 BASE_URL=
 APP_SECRET=
 
-PG_HOST=
-PG_PORT=
-PG_USER=
-PG_PASSWORD=
-PG_DATABASE=
-
-TYPEORM_ENTITIES =
-TYPEORM_MIGRATIONS =
-TYPEORM_MIGRATIONS_DIR =
+MONGO_URL=
