--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
     "build": "tsc",
     "start": "node dist/server.js",
     "kill": "npx kill-port 3333",
-    "dev": "ts-node-dev --respawn --transpile-only --ignore-watch node_modules server.ts",
-    "typeorm": "ts-node-dev node_modules/typeorm/cli.js"
+    "dev": "ts-node-dev --respawn --transpile-only --ignore-watch node_modules server.ts"
   },
   "dependencies": {
     "axios": "^0.21.1",
@@ -20,16 +19,15 @@
     "dotenv": "^9.0.2",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
-    "pg": "^8.6.0",
+    "mongoose": "^5.12.11",
     "reflect-metadata": "^0.1.13",
-    "ts-node-dev": "^1.1.6",
-    "typeorm": "^0.2.32",
-    "uuid": "^8.3.2"
+    "ts-node-dev": "^1.1.6"
   },
   "devDependencies": {
     "@types/cors": "^2.8.10",
     "@types/express": "^4.17.11",
     "@types/jsonwebtoken": "^8.5.1",
+    "@types/mongoose": "^5.10.5",
     "@types/uuid": "^8.3.0",
     "typescript": "^4.2.4"
   }
