--- a/package.json
+++ b/package.json
@@ -1,11 +1,8 @@
 {
-  "name": "api-trade-cards-v3",
+  "name": "api-trade-cards",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
-  "engines": {
-    "node": "14.16.1"
-  },
   "scripts": {
     "build": "tsc",
     "start": "node dist/server.js",
@@ -14,21 +11,19 @@
   },
   "dependencies": {
     "axios": "^0.21.1",
-    "blaz-steam-api": "^1.0.3",
     "cors": "^2.8.5",
-    "dotenv": "^9.0.2",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.12.11",
-    "reflect-metadata": "^0.1.13",
+    "mongoose": "^5.12.12",
+    "steamapi": "^2.1.3",
     "ts-node-dev": "^1.1.6"
   },
   "devDependencies": {
     "@types/cors": "^2.8.10",
-    "@types/express": "^4.17.11",
+    "@types/express": "^4.17.12",
     "@types/jsonwebtoken": "^8.5.1",
-    "@types/mongoose": "^5.10.5",
-    "@types/uuid": "^8.3.0",
-    "typescript": "^4.2.4"
+    "@types/mongoose": "^5.11.48",
+    "typescript": "^4.3.2"
   }
 }
